# cuboid

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
src/appserver/: __init__.py  wsgi.py
src/cuboid/: __init__.py  __main__.py  cli.py  cuboid.py
tests/: test_cuboid.py  test_cuboid_cli.py
