[metadata]
name = cuboid
version = 0.1.15
author = Toomas Vendelin
author_email = toomas.vendelin@gmail.com
description = The intimate life of cuboids
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src 
    
packages = find:
python_requires = >=3.6

install_requires =
    setuptools >=42
    wheel
    flask >=2.0
    uwsgi
    mariadb


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wsgi = appserver.wsgi:main
    cuboid = cuboid.cli:main
